syntax = 'proto3';

package complex_types;

option java_multiple_files = true;
option java_package = "org.example.grpc.complex_types";


enum BodyType {
  SEDAN = 0;
  SUV = 1;
  COUPE = 2;
}

message Car{
  string name = 1;
  string model = 2;
  int32 year = 3;
  BodyType body_style = 4;
}

message Cars{
  repeated Car cars = 1;
}

message CarYearMap{
  map<int32, Cars> carMap = 1;
}
